<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.exa.lj.rtkgps.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BView"
        android:text="@string/positionB"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LView"
        android:text="@string/positionL"
        android:layout_below="@id/BView"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/HView"
        android:text="@string/positionH"
        android:layout_below="@id/LView"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/NView"
        android:text="@string/Nresid"
        android:layout_below="@id/HView"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/EView"
        android:text="@string/Eresid"
        android:layout_below="@id/NView"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/UView"
        android:text="@string/Uresid"
        android:layout_below="@id/EView"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SATNUMView"
        android:text="@string/SATnum"
        android:layout_below="@id/UView"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/MODEView"
        android:text="@string/Mode"
        android:layout_below="@id/SATNUMView"
        android:layout_marginBottom="16dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/TIMEView"
        android:text="@string/time"
        android:layout_below="@id/MODEView"
        android:layout_marginBottom="16dp"/>


    <TextView
        android:id="@+id/latview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResultB"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/BView"
        android:layout_marginLeft="60dp"/>
    <TextView
        android:id="@+id/lonView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResultL"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/LView"
        android:layout_marginLeft="60dp"/>
    <TextView
        android:id="@+id/heiView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResultH"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/HView"
        android:layout_marginLeft="60dp"/>
    <TextView
        android:id="@+id/sdnView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResultN"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/NView"
        android:layout_marginLeft="60dp"/>

    <TextView
        android:id="@+id/sduView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResultU"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/UView"
        android:layout_marginLeft="60dp"/>
    <TextView
        android:id="@+id/sdeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResultE"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/EView"
        android:layout_marginLeft="60dp"/>

    <TextView
        android:id="@+id/positionmodeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResultU"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/MODEView"
        android:layout_marginLeft="60dp"/>
    <TextView
        android:id="@+id/satnumView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResultU"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/SATNUMView"
        android:layout_marginLeft="60dp"/>
    <TextView
        android:id="@+id/timeview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ResultU"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/TIMEView"
        android:layout_marginLeft="60dp"/>


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/runButton"
        android:text="@string/run"
        android:elevation="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/TIMEView"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setButton"
        android:text="@string/setButton"
        android:elevation="2dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/runButton"/>


</RelativeLayout>
