<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rawobsdataView"
        android:text="@string/rawobsdataView"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:textSize="30px"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  >
    <TextView
        android:layout_weight="1"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:id="@+id/ntrip1View"
        android:text="@string/nrtip"
        android:layout_marginLeft="15dp"
        android:textSize="25px"
        />
        <EditText
            android:layout_weight="4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/rawobsdata"
            android:text="@string/rawobsdatashow"
            android:gravity="center_horizontal"
            android:textSize="25px"
            />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rawnavdataView"
        android:text="@string/rawnavdataView"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:textSize="30px"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  >
        <TextView
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/ntrip2View"
            android:text="@string/nrtip"
            android:layout_marginLeft="15dp"
            android:textSize="25px"
            />
        <EditText
            android:layout_weight="4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/rawnavdata"
            android:text="@string/rawnavdatashow"
            android:gravity="center_horizontal"
            android:textSize="25px"
            />

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rawssrdataView"
        android:text="@string/rawssrdataView"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:textSize="30px"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"  >
        <TextView
            android:layout_weight="1"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/ntrip3View"
            android:text="@string/nrtip"
            android:layout_marginLeft="15dp"
            android:textSize="25px"
            />
        <EditText
            android:layout_weight="4"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/rawssrdata"
            android:text="@string/rawssrdatashow"
            android:gravity="center_horizontal"
            android:textSize="25px"
            />

    </LinearLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/OK"
        android:text="@string/OK"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />
</LinearLayout>